; ModuleID = '/home/carl/AnghaBench/linux/drivers/hwtracing/coresight/extr_coresight-tmc-etr.c_tmc_etr_disable_hw.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/hwtracing/coresight/extr_coresight-tmc-etr.c_tmc_etr_disable_hw.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.tmc_drvdata = type { i32*, i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.tmc_drvdata*)* @tmc_etr_disable_hw to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @tmc_etr_disable_hw(%struct.tmc_drvdata* %0) #0 {
  %2 = alloca %struct.tmc_drvdata*, align 8
  store %struct.tmc_drvdata* %0, %struct.tmc_drvdata** %2, align 8
  %3 = load %struct.tmc_drvdata*, %struct.tmc_drvdata** %2, align 8
  %4 = call i32 @__tmc_etr_disable_hw(%struct.tmc_drvdata* %3)
  %5 = load %struct.tmc_drvdata*, %struct.tmc_drvdata** %2, align 8
  %6 = call i32 @tmc_etr_disable_catu(%struct.tmc_drvdata* %5)
  %7 = load %struct.tmc_drvdata*, %struct.tmc_drvdata** %2, align 8
  %8 = getelementptr inbounds %struct.tmc_drvdata, %struct.tmc_drvdata* %7, i32 0, i32 1
  %9 = load i32, i32* %8, align 8
  %10 = call i32 @coresight_disclaim_device(i32 %9)
  %11 = load %struct.tmc_drvdata*, %struct.tmc_drvdata** %2, align 8
  %12 = getelementptr inbounds %struct.tmc_drvdata, %struct.tmc_drvdata* %11, i32 0, i32 0
  store i32* null, i32** %12, align 8
  ret void
}

declare dso_local i32 @__tmc_etr_disable_hw(%struct.tmc_drvdata*) #1

declare dso_local i32 @tmc_etr_disable_catu(%struct.tmc_drvdata*) #1

declare dso_local i32 @coresight_disclaim_device(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
